<resources>
    <string name="app_name" translatable="false">Korovay News App</string>

    <!--    Main Activity-->
    <string name="search">Search</string>
    <string name="profile">Account</string>
    <string name="history">History</string>

    <!--    About fragment-->
    <string name="menu_about">About</string>
    <string name="bio_title">Evgeniy Bezkorovayniy\n24 y.o., Tula, Russia</string>
    <string name="bio_description">Hi, i\'m Junior Android Developer, i\'m looking for a remote job, but i\'m also ready to move.
        \nThis is application for my porfolio.
        \nIf you are interested in me, you can contact me in the following ways:</string>
    <string name="contact_phone" translatable="false">+7 963 227 9776</string>
    <string name="contact_email" translatable="false">thirteenisluckynumber@gmail.com</string>
    <string name="contact_telegram" translatable="false">the_korovay</string>
    <string name="contact_telegram_link" translatable="false">https://t.me/%s</string>
    <string name="contact_whatsapp" translatable="false">@string/contact_phone</string>
    <string name="contact_whatsapp_link" translatable="false">https://api.whatsapp.com/send?phone=%s</string>
    <string name="contact_github" translatable="false">thekorovay</string>
    <string name="contact_github_link" translatable="false">https://github.com/%s/my_portfolio</string>
    <string name="contact_icon">Contact icon</string>
    <string name="check_source_code_here">You can check source code of this app here:</string>
    <string name="email_subject">Android Developer Vacancy</string>
    <string name="toast_copied_to_clipboard">Copied to clipboard</string>

    <!--    News module-->
    <string name="search_query">Query (English only)</string>
    <string name="safe_search">Safe search</string>
    <string name="thumbnails">Thumbnails</string>
    <string name="results_per_page">Results per page</string>
    <string name="search_news">Search News</string>
    <string name="last_search_results">Show last search results</string>
    <string name="content_desc_picture_for_article">Picture for article</string>
    <string name="content_desc_no_internet_icon">No internet icon</string>
    <string name="source_template">Source: %s</string>
    <string name="article">Article</string>
    <string name="snack_enter_query">Please enter the search query</string>
    <string name="search_results">Search results</string>
    <string name="article_thumbnail">Article thumbnail</string>
    <string name="show_more">Show more</string>
    <string name="oops">Oops!</string>
    <string name="no_internet_description">Something went wrong while downloading your news
        \nPlease check your internet connection or try again later</string>
    <string name="couldnt_load_news">Couldn\'t load news</string>
    <string name="try_again">Try again</string>
    <string name="no_news_for_request">No news found for your request</string>
    <string name="datetime_format" translatable="false">MM.dd.yyyy HH:mm</string>
    <string name="datetime_format_with_seconds" translatable="false">MM.dd.yyyy HH:mm:ss</string>
    <string name="from_date">From %s</string>
    <string name="showing_results_for_query">Showing results for \"%s\"</string>

    <!--    History fragment-->
    <string name="content_desc_clear_search_history_button">Clear search history Button</string>
    <string name="clear_history_dialog_title">Clear history?</string>
    <string name="clear_history_dialog_message">This action cannot be undone</string>
    <string name="dialog_btn_clear">Clear</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="search_history_is_empty">Search history is empty</string>
    <string name="search_history_fragment_label">Search History</string>

    <!--    Profile module-->
    <string name="you_are_signed_out">You are signed out</string>
    <string name="signed_in_as">Signed in as %s</string>
    <string name="history_will_be_saved">Search history %s be saved in cloud</string>
    <string name="history_will">will</string>
    <string name="history_wont">won\'t</string>
    <string name="sign_in">Sign in</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign up</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="or_sign_up">…or sign up</string>
    <string name="content_desc_sign_in_status_icon">Sign in status icon</string>
    <string name="sign_in_with_google">…or sign in with Google</string>
    <string name="sign_up_with_google">…or sign up with Google</string>
    <string name="sign_in_with_email_and_password">Sign in with email and password</string>
    <string name="sign_up_with_email_and_password">Sign up with email and password</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="name_optionally">Name (optionally)</string>
    <string name="repeat_password">Repeat password</string>
    <string name="unknown_error">Something went wrong. Try again later</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="invalid_password_error">Password must be between %1$d and %2$d characters and not contain spaces</string>
    <string name="passwords_not_match_error">Passwords don\'t match</string>
    <string name="user_name_updating_error">Failed to update user name</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="restore_password">Restore password</string>
    <string name="enter_your_email_address">Enter your email address and we will send an email with further instructions to it</string>
    <string name="restore">Restore</string>
    <string name="restore_password_email_sent">Email with further instructions has been sent to your email</string>
    <string name="error_dialog_title">Error</string>
    <string name="dialog_btn_close">Close</string>
</resources>