<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_graph"
    app:startDestination="@id/searchParamsFragment">

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.thekorovay.myportfolio.module_about.AboutFragment"
        android:label="@string/menu_about" />
    <fragment
        android:id="@+id/searchParamsFragment"
        android:name="com.thekorovay.myportfolio.module_news.ui.SearchParamsFragment"
        android:label="@string/search_news">
        <action
            android:id="@+id/action_searchParamsFragment_to_searchResultsFragment"
            app:destination="@id/searchResultsFragment" />
        <argument
            android:name="request"
            app:argType="com.thekorovay.myportfolio.domain_model.SearchRequest"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_searchParamsFragment_to_aboutFragment"
            app:destination="@id/aboutFragment"/>
    </fragment>
    <fragment
        android:id="@+id/readArticleFragment"
        android:name="com.thekorovay.myportfolio.module_news.ui.ReadArticleFragment"
        android:label="@string/article">
        <argument
            android:name="article"
            app:argType="com.thekorovay.myportfolio.domain_model.Article" />
    </fragment>
    <fragment
        android:id="@+id/searchResultsFragment"
        android:name="com.thekorovay.myportfolio.module_news.ui.SearchResultsFragment"
        android:label="@string/search_results">
        <action
            android:id="@+id/action_searchResultsFragment_to_readArticleFragment"
            app:destination="@id/readArticleFragment"  />
        <argument
            android:name="showingLastSearchResults"
            app:argType="boolean" />
        <argument
            android:name="searchRequest"
            app:argType="com.thekorovay.myportfolio.domain_model.SearchRequest" />
    </fragment>
    <fragment
        android:id="@+id/searchHistoryFragment"
        android:name="com.thekorovay.myportfolio.module_search_history.ui.SearchHistoryFragment"
        android:label="@string/search_history_fragment_label" >
        <action
            android:id="@+id/action_searchHistoryFragment_to_searchParamsFragment"
            app:destination="@id/searchParamsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/searchParamsFragment" />
    </fragment>
    <fragment android:id="@+id/placeholder" />


</navigation>