<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isSignedIn"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/profile" />

        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/content_desc_sign_in_status_icon"
            android:src="@drawable/power_off_to_on"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.2" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TitleTextStyle"
            textWithFade="@{isSignedIn ? @string/signed_in_as(`TEST USER`) : @string/you_are_signed_out}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/you_are_signed_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_status"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/tv_subtitle"
            style="@style/ContentTextStyle"
            textWithFade="@{@string/history_will_be_saved(isSignedIn ? @string/history_will : @string/history_wont)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintWidth_percent="0.8"
            tools:text="@string/history_will_be_saved" />

        <Button
            android:id="@+id/btn_sign_in"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@{isSignedIn ? @string/sign_out : @string/sign_in}"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
            app:layout_constraintDimensionRatio="10:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.6" />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/ActionButtonStyle"
            isActive="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_up"
            android:visibility="@{isSignedIn ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintWidth_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>