<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.thekorovay.myportfolio.module_profile.viewmodels.SignInViewModel" />

        <variable
            name="isLoading"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/sign_in" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{isLoading ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/ContentTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in_with_email_and_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pb_loading"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/et_email"
            style="@style/ContentTextStyle"
            isActive="@{!isLoading}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="email|email address"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/et_password"
            style="@style/ContentTextStyle"
            isActive="@{!isLoading}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintWidth_percent="0.8" />

        <Button
            android:id="@+id/btn_forgot_password"
            style="@style/ActionButtonStyle"
            isActive="@{!isLoading}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.restorePassword()}"
            android:text="@string/forgot_your_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintWidth_percent="0.8" />

        <Button
            android:id="@+id/btn_sign_in"
            style="@style/ButtonStyle"
            invertTextColor="@{true}"
            isActive="@{!isLoading}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{() -> viewModel.signIn()}"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_in_with_google"
            app:layout_constraintDimensionRatio="10:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.6" />

        <Button
            android:id="@+id/btn_sign_in_with_google"
            style="@style/ActionButtonStyle"
            isActive="@{!isLoading}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            app:layout_constraintWidth_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>